vitaskär and uraniborf report are finished.

--- a/docs/ventrafiken/02.10_data.ipynb
+++ b/docs/ventrafiken/02.10_data.ipynb
@@ -110,8 +110,8 @@
     "loader_raw = catalog.load(f'{ship}.raw_data')\n",
     "df_raw = loader_raw[list(loader_raw.keys())[-1]]()\n",
     "dt = pd.to_datetime(df_raw['Timestamp']).diff().mean()\n",
-    "t_start = pd.to_datetime(df.dropna()['time']).iloc[0]\n",
-    "t_end = pd.to_datetime(df.dropna()['time']).iloc[-1]\n",
+    "t_start = df.index[0]\n",
+    "t_end = df.index[-1]\n",
     "\n",
     "trip_statistics = catalog.load(f'{ship}.trip_statistics')\n",
     "trip_statistics_clean = catalog.load(f'{ship}.trip_statistics_clean')\n",
@@ -171,7 +171,7 @@
     "    if not key in decimals:\n",
     "        decimals[key] = 1\n",
     "        \n",
-    "table = df__.round(decimals=decimals).transpose()\n",
+    "table = df__.round(decimals=decimals).transpose().dropna()\n",
     "table.index.name='Signal'\n",
     "glue('data_describe',pop_index(table))"
    ]
@@ -198,14 +198,6 @@
     "Data summary\n",
     "```"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4a780d5e-a15e-4696-9c34-23ef3af34d03",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
