--- a/docs/ventrafiken/03.01_results.ipynb
+++ b/docs/ventrafiken/03.01_results.ipynb
@@ -85,7 +85,8 @@
     "import geopandas as gp\n",
     "from d2e2f.reporting import pop_index, reload_kedro\n",
     "import yaml\n",
-    "catalog = reload_kedro()"
+    "catalog = reload_kedro()\n",
+    "from d2e2f.analyze import arange_trip_matrix"
    ]
   },
   {
@@ -123,41 +124,7 @@
     "min_time = catalog.load(f'params:{ship}.min_time')\n",
     "max_time = catalog.load(f'params:{ship}.max_time')\n",
     "min_distance = catalog.load(f'params:{ship}.min_distance')\n",
-    "min_start_speed = catalog.load(f'params:{ship}.min_start_speed')\n",
-    "max_time_diff = catalog.load(f\"params:{ship}.max_time_diff\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ee3d7117-2ca7-48bd-8c12-1049bfd03e8b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('metadata.yml',mode='r') as file:\n",
-    "    metadata = yaml.safe_load(file)\n",
-    "ship=metadata['ship']\n",
-    "shipname = metadata['shipname']\n",
-    "\n",
-    "df = catalog.load(f'{ship}.data_with_trip_columns')\n",
-    "df['time'] = df.index\n",
-    "loader_raw = catalog.load(f'{ship}.raw_data')\n",
-    "df_raw = loader_raw[list(loader_raw.keys())[-1]]()\n",
-    "df_raw.index = pd.to_datetime(df_raw['Timestamp'])\n",
-    "dt = pd.to_datetime(df_raw['Timestamp']).diff().mean()\n",
-    "t_start = df.iloc[0].name\n",
-    "t_end = df.iloc[-1].name\n",
-    "\n",
-    "trip_statistics = catalog.load(f'{ship}.trip_statistics')\n",
-    "trip_statistics_clean = catalog.load(f'{ship}.trip_statistics_clean')\n",
-    "trip_statistics_clean['trip_no'] = trip_statistics_clean.index\n",
-    "trip_statistics_clean.index = pd.to_datetime(trip_statistics_clean['start_time'])\n",
-    "trip_statistics_clean.index.name = 'time'\n",
-    "\n",
-    "harbours = catalog.load(f'params:{ship}.harbours')\n",
-    "min_time = catalog.load(f'params:{ship}.min_time')\n",
-    "max_time = catalog.load(f'params:{ship}.max_time')\n",
-    "min_distance = catalog.load(f'params:{ship}.min_distance')\n",
+    "max_distance = catalog.load(f'params:{ship}.max_distance')\n",
     "min_start_speed = catalog.load(f'params:{ship}.min_start_speed')\n",
     "max_time_diff = catalog.load(f\"params:{ship}.max_time_diff\")"
    ]
@@ -178,6 +145,7 @@
     "glue('min_time', min_time)\n",
     "glue('max_time', max_time)\n",
     "glue('min_distance', min_distance)\n",
+    "glue('max_distance', max_distance)\n",
     "glue('min_start_speed', min_start_speed)\n",
     "glue('shipname', shipname)\n",
     "glue('max_time_diff', max_time_diff)\n",
@@ -188,6 +156,138 @@
     "glue('direction1',trip_statistics_clean['trip_direction'].unique()[0])\n",
     "glue('direction2',trip_statistics_clean['trip_direction'].unique()[1])\n",
     "glue('no_trips',len(trip_statistics_clean))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68d48eed-d36e-4387-aa8b-90f04be6ec48",
+   "metadata": {
+    "tags": [
+     "remove_cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "glue('no_trips',len(trip_statistics))\n",
+    "glue('no_trips_clean',len(trip_statistics_clean))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e930bf44-b45f-46f1-a70f-7ed266dbd3e3",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Data cleaning\n",
+    "From {glue:}`no_trips` initial trips, {glue:}`no_trips_clean` trips fulfill the criteria as defined in [the method section](sec:datacleaning). The selection of trips is displayed in {numref}`fig:select_trip_time` and {numref}`fig:select_trip_distance`.\n",
+    "\n",
+    "```{glue:figure} fig:select_trip_time\n",
+    ":name: \"fig:select_trip_time\"\n",
+    "\n",
+    "Selected trips from trip time\n",
+    "```\n",
+    "\n",
+    "```{glue:figure} fig:select_trip_distance\n",
+    ":name: \"fig:select_trip_distance\"\n",
+    "\n",
+    "Selected trips from trip distance\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f466148-1b73-47f4-9ea2-bd6a9e954392",
+   "metadata": {
+    "tags": [
+     "remove_cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "fig,axes=plt.subplots(nrows=2)\n",
+    "\n",
+    "ax=axes[0]\n",
+    "sns.histplot(trip_statistics, x='trip_time', ax=ax);\n",
+    "ax.set_title('All trips')\n",
+    "\n",
+    "ylims=ax.get_ylim()\n",
+    "ax.fill_between(x=[min_time, max_time], y1=0, y2=ylims[1], alpha=0.2, color='black', label='Selected')\n",
+    "ax.legend()\n",
+    "\n",
+    "ax=axes[1]\n",
+    "sns.histplot(trip_statistics_clean, x='trip_time', ax=ax);\n",
+    "ax.set_title('Selected trips')\n",
+    "\n",
+    "\n",
+    "fig_name = 'fig:select_trip_time'\n",
+    "glue(fig_name, fig, display=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2d61654-3aed-4894-9201-4987c870a9e4",
+   "metadata": {
+    "tags": [
+     "remove_cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "fig,axes=plt.subplots(nrows=2)\n",
+    "\n",
+    "ax=axes[0]\n",
+    "sns.histplot(trip_statistics, x='distance', ax=ax);\n",
+    "ax.set_title('All trips')\n",
+    "\n",
+    "ylims=ax.get_ylim()\n",
+    "xlims=ax.get_xlim()\n",
+    "\n",
+    "ax.fill_between(x=[min_distance, max_distance], y1=0, y2=ylims[1], alpha=0.2, color='black', label='Selected')\n",
+    "ax.legend()\n",
+    "\n",
+    "ax=axes[1]\n",
+    "sns.histplot(trip_statistics_clean, x='distance', ax=ax);\n",
+    "ax.set_title('Selected trips')\n",
+    "\n",
+    "\n",
+    "fig_name = 'fig:select_trip_distance'\n",
+    "glue(fig_name, fig, display=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "afdea487-9ca1-4472-9c6b-3b94e8376a14",
+   "metadata": {
+    "tags": [
+     "remove_cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "mask = trip_statistics['distance'] > max_distance\n",
+    "mask= df['trip_no'].isin(trip_statistics.loc[mask,'trip_no'])\n",
+    "trips = df.loc[mask]\n",
+    "plot_trips(trips)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "969c17f5-0ea8-41b5-8cca-a35130e43427",
+   "metadata": {},
+   "source": [
+    "There are a few trips with very long trip time and distance as seen in {numref}`fig:select_trip_distance`. These trips are outside the normal operation as seen in {numref}`fig:long_trips`.\n",
+    "\n",
+    "```{figure} long_trips.png\n",
+    "---\n",
+    "name: fig:long_trips\n",
+    "---\n",
+    "Long trips outside the normal operation\n",
+    "```"
    ]
   },
   {
@@ -278,7 +378,7 @@
    "id": "7f204840-eb28-41dc-aa34-c7a111871c49",
    "metadata": {},
    "source": [
-    "Statistics for the {glue:}`no_trips` trips are summarized in {numref}`tab:trips_describe_0` for the {glue:text}`direction1` direction and in {numref}`tab:trips_describe_1` for the {glue:text}`direction2` direction.\n",
+    "Statistics for the {glue:}`no_trips_clean` trips are summarized in {numref}`tab:trips_describe_0` for the {glue:text}`direction1` direction and in {numref}`tab:trips_describe_1` for the {glue:text}`direction2` direction.\n",
     "\n",
     "```{glue:figure} trips_describe_0\n",
     ":figwidth: 300px\n",
@@ -296,11 +396,9 @@
     "\n",
     "Latitude, longitude, speed over ground (sog) and course over ground (cog) are expressed as the mean values for each trip. Consumption, trip_time and distance are expressed as the total fuel consumption (in liters), total trip duration (in seconds) and total distance (in meters).\n",
     "\n",
-    "The statistics display a very consistent way to operate this ship; the speed over ground (sog) varies between {glue:}`sog_min` and {glue:}`sog_max` m/s with a standard deviation of {glue:}`sog_std` m/s; the distance varies between {glue:}`distance_min` and {glue:}`distance_max` meters with a standard deviation of {glue:}`distance_std` meters.\n",
-    "\n",
+    "The speed over ground (sog) varies between {glue:}`sog_min` and {glue:}`sog_max` m/s with a standard deviation of {glue:}`sog_std` m/s; the distance varies between {glue:}`distance_min` and {glue:}`distance_max` meters with a standard deviation of {glue:}`distance_std` meters.\n",
     "The total fuel consumption varies between {glue:}`consumption_min` and {glue:}`consumption_max` liters per trip with a standard deviation of {glue:}`consumption_std` liters.\n",
-    "\n",
-    "The mean consumption is a bit higher for trips in the {glue:text}`direction2` direction, which can also be seen in {numref}`fig:fuel_hist`.\n",
+    "The mean consumption for trips in the {glue:text}`direction1` and {glue:text}`direction2` direction are displayed in {numref}`fig:fuel_hist`.\n",
     "\n",
     "```{glue:figure} fig:fuel_hist\n",
     ":name: \"fig:fuel_hist\"\n",
@@ -356,7 +454,7 @@
     "\n",
     "for (period,start),end in zip(period_starts.items(),ends):\n",
     "        \n",
-    "    glue(period,start, display=False)\n",
+    "    glue(period,str(start), display=False)\n",
     "    \n",
     "    trip_statistics_clean.loc[str(start):str(end),'period'] = period\n",
     "\n",
@@ -371,7 +469,7 @@
    "id": "e81335e8-88c2-42df-9534-32245d625df4",
    "metadata": {},
    "source": [
-    "Crew training in eco driving to reduce the fuel consumption of the operation of {glue:text}`shipname` was carried out {glue:text}`training`. Fuel consumption for trips before and after this training can be seen in {numref}`fig:pre_after`. The average fuel consumption per trip is very similar before and after training as seen in {numref}`fig:pre_after`.\n",
+    "Crew training in eco driving to reduce the fuel consumption of the operation of {glue:text}`shipname` was carried out {glue:text}`training`. Fuel consumption for trips before and after this training can be seen in {numref}`fig:pre_after`.\n",
     "\n",
     "```{glue:figure} fig:pre_after\n",
     ":name: \"fig:pre_after\"\n",
@@ -395,7 +493,7 @@
     "\n",
     "styles = ['k.','g.','b.']\n",
     "for style, (period, df_period) in zip(styles,trip_statistics_clean.groupby(by='period', sort=False)):\n",
-    "    plot = df_period.plot(y='consumption', label=period, ax=ax, style=style, alpha=0.5)\n",
+    "    plot = df_period.plot(y='consumption', label=period, ax=ax, style=style, alpha=0.15)\n",
     "    xs = [df_period.index[0],df_period.index[-1]]\n",
     "    ys = np.array([1,1])*df_period['consumption'].mean()\n",
     "    ax.plot(xs, ys, '-', label=f\"Average {period.lower()}\", color=plot.lines[-1].get_color(), zorder=10)\n",
@@ -441,6 +539,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7c72d52b-daef-4b76-bdf1-a97db5400a8d",
+   "metadata": {
+    "tags": [
+     "remove_cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "df_ = df_compare[interesting]\n",
+    "df_ = df_.divide(df_.iloc[0])*100\n",
+    "glue('tab:savings_pct',pop_index(df_).round(decimals=decimals))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "11d19118-af93-4a02-9c0a-08554c19f65b",
    "metadata": {
     "tags": [
@@ -450,9 +564,7 @@
    "outputs": [],
    "source": [
     "import matplotlib.ticker as mtick\n",
-    "df_ = df_compare[interesting]\n",
     "fig,ax=plt.subplots()\n",
-    "df_ = df_.divide(df_.iloc[0])*100\n",
     "df_.transpose().plot(kind='bar', ax=ax)\n",
     "ax.legend(loc='upper center', bbox_to_anchor=(0.5, 1.15), ncol=3)\n",
     "\n",
@@ -463,18 +575,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36629f88-2745-4311-8c47-81e47f5650fd",
+   "metadata": {
+    "tags": [
+     "remove_cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "glue('first_period',list(period_starts.keys())[0])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "b538592c-7a64-4a01-8bbd-3b89c01798f9",
    "metadata": {},
    "source": [
-    "Mean values for the periods are shown in {numref}`tab:savings` and {numref}`fig:savings`.\n",
+    "Mean values for the periods are shown in {numref}`tab:savings`. \n",
+    "Percentage change of mean values compared to {glue:text}`first_period` are displayed in {numref}`tab:savings_pct` and {numref}`fig:savings`.\n",
     "\n",
     "```{glue:figure} tab:savings\n",
     ":name: \"tab:savings\"\n",
     "\n",
-    "Mean values for trips for each period.\n",
+    "Mean values for trips in periods.\n",
     "```\n",
-    "There is a small tendency that the fuel consumption is larger during the low season.\n",
+    "\n",
+    "```{glue:figure} tab:savings_pct\n",
+    ":name: \"tab:savings_pct\"\n",
+    "\n",
+    "Percentage change of mean values compared to {glue:text}`first_period`.\n",
+    "```\n",
+    "\n",
     "```{glue:figure} fig:savings\n",
     ":name: \"fig:savings\"\n",
     "\n",
@@ -495,7 +628,7 @@
    "id": "96ad5436-0bdc-49c4-956f-8d1faf72cbd2",
    "metadata": {},
    "source": [
-    "The average trip can be studied by calculating the mean speed and consumption for each time stamp along the trips. The average speed over ground (sog) for the trip time stamps is displayed for each period in {numref}`fig:mean_speed`. The speed is lower in the beginning and higher in the end of the trips {glue:text}`direction1` at the low season which is producing a higher fuel consumption as displayed in {numref}`fig:mean_consumption`.\n",
+    "The average trip can be studied by calculating the mean speed and consumption for each time stamp along the trips. The average speed over ground (sog) for the trip time stamps is displayed for each period in {numref}`fig:mean_speed`. Corresponding fuel consumption is displayed in {numref}`fig:mean_consumption`.\n",
     "\n",
     "```{glue:figure} fig:mean_speed\n",
     ":name: \"fig:mean_speed\"\n",
@@ -515,7 +648,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "675a8a23-dd64-49e7-aa8e-7d0f557943e9",
+   "id": "00eaa859-c733-4a8f-870b-186cad239a54",
    "metadata": {
     "tags": [
      "remove_cell"
@@ -529,9 +662,9 @@
     "    \n",
     "    for period, df__ in df_.groupby(by=['period'], sort=False):\n",
     "        \n",
-    "        mask = df['trip_no'].isin(df__['trip_no'].unique())\n",
-    "        df.loc[mask].groupby('trip_time')['sog'].mean().plot(label=period, ax=ax)\n",
-    "        ax.set_xlim(0,1450)\n",
+    "        mask = df['trip_no'].isin(df__['trip_no'].unique())       \n",
+    "        trip_matrix = arange_trip_matrix(df.loc[mask])\n",
+    "        trip_matrix.mean(axis=1).plot(label=period, ax=ax)\n",
     "        ax.set_xlabel('')\n",
     "        ax.set_ylabel('sog [m/s]')\n",
     "        ax.set_title(trip_direction)\n",
@@ -560,8 +693,8 @@
     "    for period, df__ in df_.groupby(by=['period'], sort=False):\n",
     "        \n",
     "        mask = df['trip_no'].isin(df__['trip_no'].unique())\n",
-    "        df.loc[mask].groupby('trip_time')['consumption'].mean().plot(label=period, ax=ax)\n",
-    "        ax.set_xlim(0,1450)\n",
+    "        trip_matrix = arange_trip_matrix(df.loc[mask], key='consumption')\n",
+    "        trip_matrix.mean(axis=1).plot(label=period, ax=ax)       \n",
     "        ax.set_xlabel('')\n",
     "        ax.set_ylabel('Fuel consumption')\n",
     "        ax.set_title(trip_direction)\n",
