--- a/docs/vitaskär/02.01_method.ipynb
+++ b/docs/vitaskär/02.01_method.ipynb
@@ -76,17 +76,10 @@
     "import geopandas as gp\n",
     "from d2e2f.pipelines.data_preprocessing.prepare import prepare\n",
     "from operator import add\n",
-    "from functools import reduce"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a224994d-2f6b-4ba7-b8ad-62592d230400",
-   "metadata": {},
-   "source": [
-    "# Method\n",
-    "(method)=\n",
-    "In order to investigate the energy efficiency of {glue:text}`shipname` the data is divided into trips from {glue:text}`harbour1` to {glue:text}`harbour2` or the reversed direction. The method to define the trips is further explained in the [trip section](sec:trips)."
+    "from functools import reduce\n",
+    "from d2e2f.reporting import pop_index, reload_kedro\n",
+    "import yaml\n",
+    "catalog = reload_kedro()"
    ]
   },
   {
@@ -100,10 +93,12 @@
    },
    "outputs": [],
    "source": [
-    "%reload_kedro\n",
-    "ship='vitaskar'\n",
-    "shipname = 'Vitaskär'\n",
-    "df = catalog.load(f'{ship}.preprocessed_data')\n",
+    "with open('metadata.yml',mode='r', encoding='utf8') as file:\n",
+    "    metadata = yaml.safe_load(file)\n",
+    "ship=metadata['ship']\n",
+    "shipname = metadata['shipname']\n",
+    "\n",
+    "df = catalog.load(f'{ship}.data_with_trip_numbers')\n",
     "loader_raw = catalog.load(f'{ship}.raw_data')\n",
     "df_raw = loader_raw[list(loader_raw.keys())[-1]]()\n",
     "dt = pd.to_datetime(df_raw['Timestamp']).diff().mean()\n",
@@ -143,6 +138,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a224994d-2f6b-4ba7-b8ad-62592d230400",
+   "metadata": {},
+   "source": [
+    "# Method\n",
+    "(method)=\n",
+    "In order to investigate the energy efficiency of {glue:text}`shipname` the data is divided into trips from {glue:text}`harbour1` to {glue:text}`harbour2` or the reversed direction. The method to define the trips is further explained in the next section."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4f221ded-2260-42c5-a8cd-61bee4137cd2",
    "metadata": {
     "tags": []
@@ -150,20 +155,19 @@
    "source": [
     "(sec:trips)=\n",
     "## Trips\n",
-    "The speed over ground (sog) signal is used to define the start an end of the trips. Start and ends are defined by upcrossings and downcrossing of $sog$ compared to a minumum speed $sog_{min}$. This simple algorithm will however also identify false starts of trips since {glue:text}`shipname` starts each trip by reversing from the pier and then turn to ahead as seen in {numref}`fig:false_start`.\n",
+    "The speed over ground (sog) signal is used to define the start an end of the trips. Start and ends are defined by up-crossings and down-crossing of $sog$ compared to a minumum speed $sog_{min}$ ({glue:text}`min_start_speed` m/s). This simple algorithm will however also identify false starts an ends as seen in {numref}`fig:crossings`. Starts and ends that enclose trips that have too short time duration, as seen in {numref}`fig:crossings` are disregarded as false starts and ends.\n",
     "\n",
+    "```{glue:figure} fig:crossings\n",
+    ":name: \"fig:crossings\"\n",
     "\n",
-    "```{glue:figure} fig:false_start\n",
-    ":name: \"fig:false_start\"\n",
-    "\n",
-    "The initial reversing may identify false starts.\n",
+    "Downcrossings and upcrossings of the speed signal are used to identify trip starts and ends.\n",
     "```\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70cf79b2-16ca-4daf-93c2-7aeaaa7f4993",
+   "id": "8018bfe0-caaf-4b25-9271-d48bc81a5b95",
    "metadata": {
     "tags": [
      "remove_cell"
@@ -172,111 +176,46 @@
    "outputs": [],
    "source": [
     "# Find possible starts of trips:\n",
-    "sog = df[\"sog\"]\n",
-    "mask_start = (sog < min_start_speed) & (np.roll(sog, -1) >= min_start_speed)\n",
-    "df.loc[mask_start, \"state\"] = \"start\"\n",
+    "df_ = df.loc[\"2022-06-13 09:45\":\"2022-06-13 11:00\"]\n",
+    "sog = df_[\"sog\"]\n",
+    "mask_downcross = (np.roll(sog, 1) >= min_start_speed) & (sog < min_start_speed) & (np.roll(sog, -1) < min_start_speed)\n",
+    "mask_upcross = (np.roll(sog, 1) < min_start_speed) & (sog < min_start_speed) & (np.roll(sog, -1) >= min_start_speed)\n",
     "\n",
-    "# Remove false starts:\n",
-    "mask = df[\"state\"].isin([\"start\"])\n",
-    "df[\"time\"] = df.index\n",
-    "events = df.loc[mask]\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "90e14610-fd3d-4e31-8b2b-c35682b9ed24",
-   "metadata": {
-    "tags": [
-     "remove_cell"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "mask = events[\"time\"].diff() < f'{min_time}S'\n",
-    "df.loc[events.loc[mask].index,'state'] = 'false start'\n",
-    "false_start = events.loc[mask].iloc[0]\n",
-    "t0 = false_start.name - pd.Timedelta(100,unit='s')\n",
-    "t1 = false_start.name + pd.Timedelta(300,unit='s')\n",
     "\n",
-    "df_ = df.loc[t0:t1]\n",
+    "downcrossings = df_.loc[mask_downcross]\n",
+    "upcrossings = df_.loc[mask_upcross]\n",
     "\n",
-    "with plt.style.context('paper'):\n",
-    "    fig,ax=plt.subplots()\n",
-    "    df_.plot(y='sog', label=r'$sog$', ax=ax)\n",
-    "    mask = (df_['state'] == 'start')\n",
-    "    df_.loc[mask].plot(y='sog', label=r'$t_{start}$', style='sg', ax=ax)\n",
-    "    mask = (df_['state'] == 'false start')\n",
-    "    df_.loc[mask].plot(y='sog', label=r'False $t_{start}$', style='sk', ax=ax)\n",
-    "    ax.set_ylabel('Ship speed over ground $sog$ [m/s]')\n",
-    "    ax.legend();\n",
-    "    glue('fig:false_start', fig, display=False)"
+    "fig,ax=plt.subplots()\n",
+    "df_.plot(y='sog', style='.-', ax =ax)\n",
+    "downcrossings.plot(y='sog', style='rv', label='downcrossings', ax=ax)\n",
+    "upcrossings.plot(y='sog', style='g^', label='upcrossings', ax=ax)\n",
+    "df_['min_start_speed'] = min_start_speed\n",
+    "df_.plot(y='min_start_speed', style='--', label='minimum start speed', ax=ax)\n",
+    "ax.legend()\n",
+    "#ax.set_ylim(-0.05,5*min_start_speed)\n",
+    "ax.set_ylabel('Ship speed sog [m/s]')\n",
+    "ax.grid(True)\n",
+    "glue(\"fig:crossings\",fig,display=False)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4e384a5b-4e3e-4fe8-9827-3c6da7f0ac63",
-   "metadata": {
-    "tags": []
-   },
+   "id": "b4d7f81c-d6d0-4ad9-b677-2aa9f9d1e290",
+   "metadata": {},
    "source": [
-    "A minimum trip time $t_{min}$ is introduced to exclude these false starts giving the following algorithm:\n",
+    "Examples of some starts and ends of trips are displayed in {numref}`fig:clean_starts`. \n",
     "\n",
+    "```{glue:figure} fig:clean_starts\n",
+    ":name: \"fig:clean_starts\"\n",
     "\n",
-    "**Inputs** $sog$, $sog_{min}$, $t_{min}$\n",
-    "\n",
-    "**Output** $t_{start}$, $t_{end}$\n",
-    "\n",
-    "1. Identify possible trip starts: $t_{start}$: $(sog_i < sog_{min}) \\wedge (sog_{i+i} >= sog_{min})$\n",
-    "2. Keep only valid trip starts: $t_{start,n+1} - t_{start,n} > t_{min}$\n",
-    "3. Identify trip ends: $t_{end}$: $(sog_{i-1} >= sog_{min}) \\wedge (sog_{i} < sog_{min}) \\wedge ((t_i - t_{i-1}) > t_{min} $\n",
-    "\n",
-    "where $sog_{min}$={glue:}`min_start_speed` m/s and $t_{min}$={glue:}`min_time` s. The algorithm now disregards the initial reversing as seen in {numref}`fig:divide_trips`.  \n",
-    "\n",
-    "```{glue:figure} fig:divide_trips\n",
-    ":name: \"fig:divide_trips\"\n",
-    "\n",
-    "The data is divided into trips based on the speed over ground (sog) signal.\n",
+    "Downcrossings and upcrossings of the speed signal are used to identify trip starts and ends.\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ac46156-b560-45e4-bd0a-69582a86577a",
-   "metadata": {
-    "tags": [
-     "remove_input",
-     "remove_cell"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "t2 = false_start.name + pd.Timedelta(4000,unit='s')\n",
-    "\n",
-    "df_cut = df.loc[t0:t2]\n",
-    "\n",
-    "with plt.style.context('paper'):\n",
-    "    \n",
-    "    fig,ax=plt.subplots()\n",
-    "    df_cut.plot(y='sog', label=r'$sog$', ax=ax)\n",
-    "    \n",
-    "    for state, df__ in df_cut.groupby(by='state'):\n",
-    "        if state == 'start':\n",
-    "            df__.plot(y='sog', style='sg', label=r'$t_{start}$', ax=ax)\n",
-    "        elif state == 'end':\n",
-    "            df__.plot(y='sog', style='^r', label=r'$t_{end}$', ax=ax)\n",
-    "            \n",
-    "    ax.legend();\n",
-    "    ax.set_ylabel('Ship speed over ground $sog$ [m/s]')\n",
-    "    glue('fig:divide_trips', fig, display=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e20ac8cf-78da-43ff-a3e9-f94e6ac7606d",
+   "id": "14a37151-9316-4aa6-b3fa-57596c99c559",
    "metadata": {
     "tags": [
      "remove_cell"
@@ -284,8 +223,32 @@
    },
    "outputs": [],
    "source": [
-    "glue('no_trips',len(trip_statistics))\n",
-    "glue('no_trips_clean',len(trip_statistics_clean))\n"
+    "nrows=4\n",
+    "fig,axes = plt.subplots(ncols=1, nrows=nrows)\n",
+    "axes = axes.flatten()\n",
+    "\n",
+    "index = df.loc[\"2022-06-13\":\"2022-06-13\"].index\n",
+    "indexes = np.array_split(index,nrows)\n",
+    "\n",
+    "for index,ax in zip(indexes,axes):\n",
+    "        \n",
+    "    df_=df.loc[index]\n",
+    "    \n",
+    "    starts=df_.loc[df['state']=='start']\n",
+    "    ends=df_.loc[df['state']=='end']\n",
+    "        \n",
+    "    df_.plot(y='sog', ax=ax)\n",
+    "    starts.plot(y='sog', style='gs', ax=ax, label='start')\n",
+    "    ends.plot(y='sog', style='r^', ax=ax, label='end')\n",
+    "        \n",
+    "    ax.get_legend().set_visible(False)\n",
+    "    ax.set_xlabel('')\n",
+    "    \n",
+    "axes[0].legend(loc='upper center', bbox_to_anchor=(0.5, 2.7), ncol=3)\n",
+    "\n",
+    "ax.set_xlabel('Time')\n",
+    "plt.tight_layout()\n",
+    "glue(\"fig:clean_starts\",fig, display=False)"
    ]
   },
   {
@@ -293,20 +256,27 @@
    "id": "1ab1f0ae-5cb5-4209-9b15-6f1ea6e1b9b8",
    "metadata": {},
    "source": [
+    "(sec:datacleaning)=\n",
     "## Data cleaning\n",
     "Some of the trips are removed, for instance if there is missing data or the trip is too long, based on the following criteria:\n",
     "\n",
     "* trips should have time gaps that are smaller than {glue:}`max_time_diff` s\n",
     "* trips should have a duration between {glue:}`min_time` and {glue:}`max_time` s\n",
-    "* trips should be longer than {glue:}`min_distance` m\n",
-    "\n",
-    "From {glue:}`no_trips` initial trips {glue:}`no_trips_clean` trips fulfills the above criteria."
+    "* trips should be longer than {glue:}`min_distance` m"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0522063-3548-4eb9-b488-fe2c8a3a832f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "d2e2f",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
