--- a/docs/ventrafiken/02.01_method.ipynb
+++ b/docs/ventrafiken/02.01_method.ipynb
@@ -28,9 +28,9 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "#plt.style.use('paper')\n",
-    "#from IPython.display import set_matplotlib_formats\n",
-    "#set_matplotlib_formats('pdf')\n",
+    "plt.style.use('paper')\n",
+    "from IPython.display import set_matplotlib_formats\n",
+    "set_matplotlib_formats('pdf')\n",
     "\n",
     "import seaborn as sns\n",
     "\n",
@@ -143,7 +143,7 @@
    "source": [
     "# Method\n",
     "(method)=\n",
-    "In order to investigate the energy efficiency of {glue:text}`shipname` the data is divided into trips from {glue:text}`harbour1` to {glue:text}`harbour2` or the reversed direction. The method to define the trips is further explained in the [trip section](sec:trips)."
+    "In order to investigate the energy efficiency of {glue:text}`shipname` the data is divided into trips from {glue:text}`harbour1` to {glue:text}`harbour2` or the reversed direction. The method to define the trips is further explained in the next section."
    ]
   },
   {
@@ -155,35 +155,28 @@
    "source": [
     "(sec:trips)=\n",
     "## Trips\n",
-    "The speed over ground (sog) signal is used to define the start an end of the trips. Start and ends are defined by upcrossings and downcrossing of $sog$ compared to a minumum speed $sog_{min}$. This simple algorithm will however also identify false starts of trips since {glue:text}`shipname` starts each trip by reversing from the pier and then turn to ahead as seen in {numref}`fig:false_start`.\n",
+    "The speed over ground (sog) signal is used to define the start an end of the trips. Start and ends are defined by up-crossings and down-crossing of $sog$ compared to a minumum speed $sog_{min}$ ({glue:text}`min_start_speed` m/s). This simple algorithm will however also identify false starts an ends as seen in {numref}`fig:crossings`. Starts and ends that enclose trips that have too short time duration, as seen in {numref}`fig:crossings` are disregarded as false starts and ends.\n",
     "\n",
+    "```{glue:figure} fig:crossings\n",
+    ":name: \"fig:crossings\"\n",
     "\n",
-    "```{glue:figure} fig:false_start\n",
-    ":name: \"fig:false_start\"\n",
-    "\n",
-    "The initial reversing may identify false starts.\n",
+    "Downcrossings and upcrossings of the speed signal are used to identify trip starts and ends.\n",
     "```\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa39b5ac-50cb-48cd-879b-369453d51f65",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.roll([1,2,3],-1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "8018bfe0-caaf-4b25-9271-d48bc81a5b95",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "remove_cell"
+    ]
+   },
    "outputs": [],
    "source": [
     "# Find possible starts of trips:\n",
-    "df_ = df.loc[\"2021-02-23 20:15\":\"2021-02-23 20:30\"]\n",
+    "df_ = df.loc[\"2021-02-23 20:21:30\":\"2021-02-23 20:30\"]\n",
     "sog = df_[\"sog\"]\n",
     "mask_downcross = (np.roll(sog, 1) >= min_start_speed) & (sog < min_start_speed) & (np.roll(sog, -1) < min_start_speed)\n",
     "mask_upcross = (np.roll(sog, 1) < min_start_speed) & (sog < min_start_speed) & (np.roll(sog, -1) >= min_start_speed)\n",
@@ -199,312 +192,30 @@
     "df_['min_start_speed'] = min_start_speed\n",
     "df_.plot(y='min_start_speed', style='--', label='minimum start speed', ax=ax)\n",
     "ax.legend()\n",
-    "ax.set_ylim(-0.05,3*min_start_speed)\n",
-    "#df.loc[mask_start, \"state\"] = \"start\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3b809fda-ca4c-45f2-8dfb-0ad133968b1f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_ = df.loc[\"2021-02-23 20:15\":\"2021-02-23 21:30\"]\n",
-    "sog = df_[\"sog\"]\n",
-    "mask_downcross = (sog < min_start_speed) & (np.roll(sog, 1) >= min_start_speed)\n",
-    "mask_upcross = (sog < min_start_speed) & (np.roll(sog, -1) >= min_start_speed)\n",
-    "downcrossings = df_.loc[mask_downcross]\n",
-    "upcrossings = df_.loc[mask_upcross]\n",
-    "\n",
-    "mask = upcrossings.index[0] < downcrossings.index\n",
-    "downcrossings_correct_order = downcrossings.loc[mask]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5331033c-7371-4b53-bd8b-492a7b63a763",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mask = downcrossings.index[-1] > upcrossings.index\n",
-    "upcrossings_correct_order = upcrossings.loc[mask]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "987fe86a-e07b-4d30-80a9-5b8f64451ed1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig,ax=plt.subplots()\n",
-    "df_.plot(y='sog', style='.-', ax =ax)\n",
-    "downcrossings_correct_order.plot(y='sog', style='rv', ax=ax)\n",
-    "upcrossings_correct_order.plot(y='sog', style='g^', ax=ax)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "330ddc17-e61b-4242-978c-7bae22c4b6f1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(downcrossings_correct_order)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d56ebe95-45ae-429a-9812-3435c47f2a0c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(upcrossings_correct_order)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ca6a70f1-8980-49e7-bf7e-5dea0062bfb4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trip_durations = downcrossings_correct_order.index - upcrossings_correct_order.index"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "608f6b7d-7e6f-4ffb-9d82-91e677264543",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trip_durations"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "00cf9bdc-a10c-4c5b-ad0a-54e7d4d4948a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mask = trip_durations > f\"{min_time}S\"\n",
-    "\n",
-    "upcrossings_ok = upcrossings_correct_order.loc[mask]\n",
-    "downcrossings_ok = downcrossings_correct_order.loc[mask]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b00c6abc-5c7d-4315-b541-99b9981c4569",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig,ax=plt.subplots()\n",
-    "df_.plot(y='sog', style='.-', ax =ax)\n",
-    "downcrossings_ok.plot(y='sog', style='rv', ax=ax)\n",
-    "upcrossings_ok.plot(y='sog', style='g^', ax=ax)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3b071cbe-4748-48f9-82ad-251e80b5f4da",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_upcrossings(df):\n",
-    "    sog = df[\"sog\"]\n",
-    "    mask_upcross = (np.roll(sog, 1) < min_start_speed) & (sog < min_start_speed) & (np.roll(sog, -1) >= min_start_speed)\n",
-    "    upcrossings = df_.loc[mask_upcross]\n",
-    "    return upcrossings\n",
-    "    \n",
-    "def get_downcrossings(df):\n",
-    "    sog = df[\"sog\"]\n",
-    "    mask_downcross = (np.roll(sog, 1) >= min_start_speed) & (sog < min_start_speed) & (np.roll(sog, -1) < min_start_speed)\n",
-    "    downcrossings = df_.loc[mask_downcross]\n",
-    "    return downcrossings\n",
-    "\n",
-    "upcrossings = get_upcrossings(df)\n",
-    "downcrossings = get_downcrossings(df)\n",
-    "    \n",
-    "def correct_the_order(upcrossings, downcrossings):\n",
-    "    mask = upcrossings.index[0] < downcrossings.index\n",
-    "    downcrossings_correct_order = downcrossings.loc[mask]\n",
-    "    \n",
-    "    mask = downcrossings.index[-1] > upcrossings.index\n",
-    "    upcrossings_correct_order = upcrossings.loc[mask]\n",
-    "    \n",
-    "    assert len(downcrossings_correct_order) == len(upcrossings_correct_order)\n",
-    "    assert len(set(downcrossings_correct_order.index) & set(upcrossings_correct_order.index)) == 0\n",
-    "    \n",
-    "    \n",
-    "    return upcrossings_correct_order, downcrossings_correct_order\n",
-    "\n",
-    "\n",
-    "upcrossings_correct_order, downcrossings_correct_order = correct_the_order(upcrossings=upcrossings, downcrossings=downcrossings)\n",
-    "\n",
-    "def filter_with_trip_duration(upcrossings_correct_order, downcrossings_correct_order, min_time:int):\n",
-    "    trip_durations = downcrossings_correct_order.index - upcrossings_correct_order.index\n",
-    "    mask = trip_durations > f\"{min_time}S\"\n",
-    "    upcrossings_ok = upcrossings_correct_order.loc[mask]\n",
-    "    downcrossings_ok = downcrossings_correct_order.loc[mask]\n",
-    "    \n",
-    "    return upcrossings_ok, downcrossings_ok\n",
-    "\n",
-    "upcrossings_ok, downcrossings_ok = filter_with_trip_duration(upcrossings_correct_order=upcrossings_correct_order, downcrossings_correct_order=downcrossings_correct_order, min_time=min_time)\n",
-    "\n",
-    "df.loc[upcrossings_ok.index,'state'] = 'start'\n",
-    "df.loc[downcrossings_ok.index,'state'] = 'end'\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "70cf79b2-16ca-4daf-93c2-7aeaaa7f4993",
-   "metadata": {
-    "tags": [
-     "remove_cell"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "# Find possible starts of trips:\n",
-    "sog = df[\"sog\"]\n",
-    "mask_start = (sog < min_start_speed) & (np.roll(sog, -1) >= min_start_speed)\n",
-    "df.loc[mask_start, \"state\"] = \"start\"\n",
-    "\n",
-    "# Remove false starts:\n",
-    "mask = df[\"state\"].isin([\"start\"])\n",
-    "df[\"time\"] = df.index\n",
-    "events = df.loc[mask]\n",
-    "\n",
-    "mask = events[\"time\"].diff() < f'{min_time}S'\n",
-    "df.loc[events.loc[mask].index,'state'] = 'false start'\n",
-    "\n",
-    "mask = df['state'].isin(['start'])\n",
-    "starts = df.loc[mask]\n",
-    "mask = df['state'].isin(['false start'])\n",
-    "false_starts = df.loc[mask]\n",
-    "mask = df[\"state\"].isin([\"start\",'false start'])\n",
-    "events = df.loc[mask]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2a085af1-32ca-453c-bf8e-2ce43d308568",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "events['state'].iloc[0:100]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "90e14610-fd3d-4e31-8b2b-c35682b9ed24",
-   "metadata": {
-    "tags": [
-     "remove_cell"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "\n",
-    "false_start = false_starts.iloc[0]\n",
-    "t0 = false_start.name - pd.Timedelta(min_time,unit='s')\n",
-    "t1 = false_start.name + pd.Timedelta(min_time,unit='s')\n",
-    "\n",
-    "df_ = df.loc[t0:t1]\n",
-    "\n",
-    "with plt.style.context('paper'):\n",
-    "    fig,ax=plt.subplots()\n",
-    "    df_.plot(y='sog', label=r'$sog$', ax=ax)\n",
-    "    mask = (df_['state'] == 'start')\n",
-    "    \n",
-    "    if mask.any():\n",
-    "        df_.loc[mask].plot(y='sog', label=r'$t_{start}$', style='sg', ax=ax)\n",
-    "    \n",
-    "    mask = (df_['state'] == 'false start')\n",
-    "    if mask.any():\n",
-    "        df_.loc[mask].plot(y='sog', label=r'False $t_{start}$', style='sk', ax=ax)\n",
-    "    \n",
-    "    ax.set_ylabel('Ship speed over ground $sog$ [m/s]')\n",
-    "    ax.legend();\n",
-    "    glue('fig:false_start', fig, display=False)"
+    "ax.set_ylim(-0.05,2*min_start_speed)\n",
+    "ax.set_ylabel('Ship speed sog [m/s]')\n",
+    "ax.grid(True)\n",
+    "glue(\"fig:crossings\",fig,display=False)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4e384a5b-4e3e-4fe8-9827-3c6da7f0ac63",
-   "metadata": {
-    "tags": []
-   },
+   "id": "b4d7f81c-d6d0-4ad9-b677-2aa9f9d1e290",
+   "metadata": {},
    "source": [
-    "A minimum trip time $t_{min}$ is introduced to exclude these false starts giving the following algorithm:\n",
+    "Examples of some starts and ends of trips are displayed in {numref}`fig:clean_starts`. \n",
     "\n",
+    "```{glue:figure} fig:clean_starts\n",
+    ":name: \"fig:clean_starts\"\n",
     "\n",
-    "**Inputs** $sog$, $sog_{min}$, $t_{min}$\n",
-    "\n",
-    "**Output** $t_{start}$, $t_{end}$\n",
-    "\n",
-    "1. Identify possible trip starts: $t_{start}$: $(sog_i < sog_{min}) \\wedge (sog_{i+i} >= sog_{min})$\n",
-    "2. Keep only valid trip starts: $t_{start,n+1} - t_{start,n} > t_{min}$\n",
-    "3. Identify trip ends: $t_{end}$: $(sog_{i-1} >= sog_{min}) \\wedge (sog_{i} < sog_{min}) \\wedge ((t_i - t_{i-1}) > t_{min} $\n",
-    "\n",
-    "where $sog_{min}$={glue:}`min_start_speed` m/s and $t_{min}$={glue:}`min_time` s. The algorithm now disregards the initial reversing as seen in {numref}`fig:divide_trips`.  \n",
-    "\n",
-    "```{glue:figure} fig:divide_trips\n",
-    ":name: \"fig:divide_trips\"\n",
-    "\n",
-    "The data is divided into trips based on the speed over ground (sog) signal.\n",
+    "Downcrossings and upcrossings of the speed signal are used to identify trip starts and ends.\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ac46156-b560-45e4-bd0a-69582a86577a",
-   "metadata": {
-    "tags": [
-     "remove_input",
-     "remove_cell"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "mask = (df['state'] == 'start').idxmax()\n",
-    "t0 = df.loc[mask].name\n",
-    "t2 = t0 + pd.Timedelta(4500,unit='s')\n",
-    "\n",
-    "df_cut = df.loc[t0:t2]\n",
-    "\n",
-    "with plt.style.context('paper'):\n",
-    "    \n",
-    "    fig,ax=plt.subplots()\n",
-    "    df_cut.plot(y='sog', label=r'$sog$', ax=ax)\n",
-    "    \n",
-    "    for state, df__ in df_cut.groupby(by='state'):\n",
-    "        if state == 'start':\n",
-    "            df__.plot(y='sog', style='sg', label=r'$t_{start}$', ax=ax)\n",
-    "        elif state == 'end':\n",
-    "            df__.plot(y='sog', style='^r', label=r'$t_{end}$', ax=ax)\n",
-    "            \n",
-    "    ax.legend();\n",
-    "    ax.set_ylabel('Ship speed over ground $sog$ [m/s]')\n",
-    "    glue('fig:divide_trips', fig, display=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e20ac8cf-78da-43ff-a3e9-f94e6ac7606d",
+   "id": "e1f62737-d5e1-4bbf-bd03-4a8cc493a588",
    "metadata": {
     "tags": [
      "remove_cell"
@@ -512,8 +223,42 @@
    },
    "outputs": [],
    "source": [
-    "glue('no_trips',len(trip_statistics))\n",
-    "glue('no_trips_clean',len(trip_statistics_clean))\n"
+    "N=9\n",
+    "ncols=3\n",
+    "nrows=int(N/ncols)\n",
+    "fig,axes = plt.subplots(ncols=ncols, nrows=nrows)\n",
+    "length=700\n",
+    "axes = axes.flatten()\n",
+    "i=0\n",
+    "j=0\n",
+    "while j < N:\n",
+    "    \n",
+    "        \n",
+    "    df_=df.iloc[i*length:(i+1)*length]\n",
+    "    \n",
+    "    starts=df_.loc[df['state']=='start']\n",
+    "    ends=df_.loc[df['state']=='end']\n",
+    "    \n",
+    "    i+=1\n",
+    "    \n",
+    "    if len(starts) == 0:\n",
+    "        continue\n",
+    "    if len(ends) == 0:\n",
+    "        continue\n",
+    "    \n",
+    "    ax=axes[j]\n",
+    "    j+=1\n",
+    "    \n",
+    "    df_.plot(y='sog', ax=ax)\n",
+    "    starts.plot(y='sog', style='gs', ax=ax, label='start')\n",
+    "    ends.plot(y='sog', style='r^', ax=ax, label='end')\n",
+    "        \n",
+    "    ax.get_legend().set_visible(False)\n",
+    "    ax.set_xticks([])\n",
+    "    \n",
+    "ax.legend()\n",
+    "plt.tight_layout()\n",
+    "glue(\"fig:clean_starts\",fig, display=False)"
    ]
   },
   {
@@ -521,14 +266,13 @@
    "id": "1ab1f0ae-5cb5-4209-9b15-6f1ea6e1b9b8",
    "metadata": {},
    "source": [
+    "(sec:datacleaning)=\n",
     "## Data cleaning\n",
     "Some of the trips are removed, for instance if there is missing data or the trip is too long, based on the following criteria:\n",
     "\n",
     "* trips should have time gaps that are smaller than {glue:}`max_time_diff` s\n",
     "* trips should have a duration between {glue:}`min_time` and {glue:}`max_time` s\n",
-    "* trips should be longer than {glue:}`min_distance` m\n",
-    "\n",
-    "From {glue:}`no_trips` initial trips {glue:}`no_trips_clean` trips fulfills the above criteria."
+    "* trips should be longer than {glue:}`min_distance` m"
    ]
   }
  ],
