--- a/docs/vitaskär/02.10_data.ipynb
+++ b/docs/vitaskär/02.10_data.ipynb
@@ -74,7 +74,9 @@
     "from d2e2f.pipelines.data_preprocessing.prepare import prepare\n",
     "from operator import add\n",
     "from functools import reduce\n",
-    "from d2e2f.reporting import pop_index"
+    "from d2e2f.reporting import pop_index, reload_kedro\n",
+    "import yaml\n",
+    "catalog = reload_kedro()"
    ]
   },
   {
@@ -99,15 +101,17 @@
    },
    "outputs": [],
    "source": [
-    "%reload_kedro\n",
-    "ship='vitaskar'\n",
-    "shipname = 'Vitaskär'\n",
-    "df = catalog.load(f'{ship}.preprocessed_data')\n",
+    "with open('metadata.yml',mode='r', encoding='utf8') as file:\n",
+    "    metadata = yaml.safe_load(file)\n",
+    "ship=metadata['ship']\n",
+    "shipname = metadata['shipname']\n",
+    "\n",
+    "df = catalog.load(f'{ship}.data_with_trip_numbers')\n",
     "loader_raw = catalog.load(f'{ship}.raw_data')\n",
     "df_raw = loader_raw[list(loader_raw.keys())[-1]]()\n",
     "dt = pd.to_datetime(df_raw['Timestamp']).diff().mean()\n",
-    "t_start = pd.to_datetime(df.dropna()['time']).iloc[0]\n",
-    "t_end = pd.to_datetime(df.dropna()['time']).iloc[-1]\n",
+    "t_start = df.index[0]\n",
+    "t_end = df.index[-1]\n",
     "\n",
     "trip_statistics = catalog.load(f'{ship}.trip_statistics')\n",
     "trip_statistics_clean = catalog.load(f'{ship}.trip_statistics_clean')\n",
@@ -167,7 +171,7 @@
     "    if not key in decimals:\n",
     "        decimals[key] = 1\n",
     "        \n",
-    "table = df__.round(decimals=decimals).transpose()\n",
+    "table = df__.round(decimals=decimals).transpose().dropna()\n",
     "table.index.name='Signal'\n",
     "glue('data_describe',pop_index(table))"
    ]
@@ -179,13 +183,12 @@
    "source": [
     "Data has been collected onboard {glue:text}`shipname` ({numref}`fig:ship`) with [BlueFlow](https://www.blueflow.se/) Energy Management System between {glue:text}`t_start` and {glue:text}`t_end` with {glue:}`no_samples` million time samples. The data is summarized in {numref}`tab:data_describe`.\n",
     "\n",
-    "```{figure} vitaskär.jpg\n",
+    "```{figure} ship.png\n",
     "---\n",
     "height: 200px\n",
     "name: fig:ship\n",
     "---\n",
     "{glue:text}`shipname`\n",
-    "\n",
     "```\n",
     "\n",
     "```{glue:figure} data_describe\n",
@@ -195,11 +198,27 @@
     "Data summary\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a35318b7-9b48-411e-86bf-f4dbebe7588b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12f36d6c-a029-41b4-800c-8e5072dadf37",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "d2e2f",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
